--- a/index.html
+++ b/index.html
@@ -3,140 +3,121 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SĐT & Biển Số Ảo</title>
+  <title>Tool SĐT & Biển Số Ảo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background: #f0f4f8;
-      padding: 30px;
+      padding: 40px;
     }
-    .container {
-      max-width: 650px;
-      margin: auto;
-      background: white;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-    }
-    .item {
-      background: #f1f5f9;
-      padding: 12px 16px;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-    .phone-plate {
+    .info-box {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-    .info-group {
-      display: flex;
-      align-items: center;
-      gap: 10px;
+      gap: 20px;
+      margin-top: 20px;
     }
     .toast-container {
       position: fixed;
-      bottom: 1rem;
-      right: 1rem;
-      z-index: 1055;
+      top: 20px;
+      right: 20px;
+      z-index: 9999;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h3 class="text-center mb-4">🔢 Sinh SĐT & Biển Số Ảo</h3>
 
-    <label class="form-label">Chọn nhà mạng:</label>
-    <select id="carrier" class="form-select mb-2">
-      <option value="Viettel">Viettel</option>
-      <option value="Vinaphone">Vinaphone</option>
-      <option value="Mobifone">Mobifone</option>
-      <option value="Vietnamobile">Vietnamobile</option>
-      <option value="Gmobile">Gmobile</option>
-    </select>
+  <h2>🔢 Sinh SĐT & Biển Số Ảo</h2>
 
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="checkbox" id="randomizeCarrier" />
-      <label class="form-check-label" for="randomizeCarrier">🔀 Trộn tất cả nhà mạng</label>
-    </div>
-
-    <label for="count" class="form-label">Số lượng:</label>
-    <input type="number" id="count" class="form-control mb-3" value="5" min="1" max="100" />
-
-    <button class="btn btn-primary w-100 mb-3" onclick="generate()">🎲 Sinh dữ liệu</button>
-
-    <div id="result"></div>
+  <div class="form-check form-switch my-3">
+    <input class="form-check-input" type="checkbox" id="randomCarrier">
+    <label class="form-check-label" for="randomCarrier">Trộn nhà mạng</label>
   </div>
 
-  <!-- Toast Container -->
-  <div class="toast-container position-fixed bottom-0 end-0 p-3" id="toastContainer"></div>
+  <button class="btn btn-primary" onclick="generateInfo()">🎲 Sinh mới</button>
+
+  <div id="infoBox" class="info-box d-none">
+    <div>
+      <strong>SĐT:</strong> <span id="phoneNumber">--</span>
+      <button class="btn btn-sm btn-outline-success ms-2" onclick="copyPhone()">📋 Sao chép SĐT</button>
+    </div>
+    <div>
+      <strong>Biển:</strong> <span id="licensePlate">--</span>
+      <button class="btn btn-sm btn-outline-warning ms-2" onclick="copyPlate()">📋 Sao chép Biển</button>
+    </div>
+  </div>
+
+  <!-- Bootstrap toast -->
+  <div class="toast-container" id="toastContainer"></div>
 
   <script>
-    const prefixes = {
+    const carriers = {
       Viettel: ["032", "033", "034", "035", "036", "037", "038", "039", "086"],
       Vinaphone: ["081", "082", "083", "084", "085", "088", "091", "094"],
       Mobifone: ["070", "076", "077", "078", "079", "089", "090", "093"],
       Vietnamobile: ["052", "056", "058", "092"],
-      Gmobile: ["059", "099"],
+      Gmobile: ["059", "099"]
     };
+    const licensePrefixes = ["36AG", "36AD", "36AB", "36AS", "36AK", "36AM", "36AN", "36AX", "36AS"];
 
-    const platePrefixes = ["36AG", "36AD", "36AB", "36AS", "36AK", "36AM", "36AN", "36AX"];
+    let phoneCopied = false;
+    let plateCopied = false;
 
-    function generate() {
-      const carrierSelect = document.getElementById("carrier").value;
-      const isRandomCarrier = document.getElementById("randomizeCarrier").checked;
-      const count = parseInt(document.getElementById("count").value);
-      const result = document.getElementById("result");
-      result.innerHTML = "";
+    function generateInfo() {
+      const isRandomCarrier = document.getElementById("randomCarrier").checked;
 
-      let allPrefixes = [];
-      if (isRandomCarrier) {
-        Object.values(prefixes).forEach(arr => allPrefixes = allPrefixes.concat(arr));
-      }
+      // Tạo SĐT
+      let allPrefixes = isRandomCarrier
+        ? Object.values(carriers).flat()
+        : carriers["Viettel"]; // Default nếu không chọn trộn
 
-      for (let i = 0; i < count; i++) {
-        const phonePrefix = isRandomCarrier
-          ? allPrefixes[Math.floor(Math.random() * allPrefixes.length)]
-          : prefixes[carrierSelect][Math.floor(Math.random() * prefixes[carrierSelect].length)];
+      const prefix = allPrefixes[Math.floor(Math.random() * allPrefixes.length)];
+      const number = Math.floor(1000000 + Math.random() * 9000000);
+      const phone = prefix + number;
 
-        const phoneNum = phonePrefix + Math.floor(1000000 + Math.random() * 9000000);
+      // Tạo biển số
+      const lpHead = licensePrefixes[Math.floor(Math.random() * licensePrefixes.length)];
+      const lpBody = Math.floor(100 + Math.random() * 900); // 3 số
+      const lpTail = Math.floor(10 + Math.random() * 90); // 2 số
+      const plate = `${lpHead} - ${lpBody}.${lpTail}`;
 
-        const platePfx = platePrefixes[Math.floor(Math.random() * platePrefixes.length)];
-        const numberPart = Math.floor(100 + Math.random() * 900);
-        const tailPart = String(Math.floor(Math.random() * 100)).padStart(2, '0');
-        const plateNum = `${platePfx} - ${numberPart}.${tailPart}`;
+      // Hiển thị
+      document.getElementById("phoneNumber").innerText = phone;
+      document.getElementById("licensePlate").innerText = plate;
+      document.getElementById("infoBox").classList.remove("d-none");
 
-        const item = document.createElement("div");
-        item.className = "item";
+      // Reset trạng thái copy
+      phoneCopied = false;
+      plateCopied = false;
+    }
 
-        item.innerHTML = `
-          <div class="phone-plate">
-            <div class="info-group">
-              <span>📱 <strong>${phoneNum}</strong></span>
-              <button class="btn btn-sm btn-outline-secondary" onclick="copyToClipboard('${phoneNum}', 'SĐT')">Sao chép SĐT</button>
-            </div>
-            <div class="info-group">
-              <span>🚘 <strong>${plateNum}</strong></span>
-              <button class="btn btn-sm btn-outline-secondary" onclick="copyToClipboard('${plateNum}', 'Biển số')">Sao chép BS</button>
-            </div>
-          </div>
-        `;
-        result.appendChild(item);
+    function copyPhone() {
+      const text = document.getElementById("phoneNumber").innerText;
+      navigator.clipboard.writeText(text);
+      showToast("Đã sao chép SĐT!");
+      phoneCopied = true;
+      checkCopiedAll();
+    }
+
+    function copyPlate() {
+      const text = document.getElementById("licensePlate").innerText;
+      navigator.clipboard.writeText(text);
+      showToast("Đã sao chép Biển số!");
+      plateCopied = true;
+      checkCopiedAll();
+    }
+
+    function checkCopiedAll() {
+      if (phoneCopied && plateCopied) {
+        setTimeout(() => {
+          document.getElementById("infoBox").classList.add("d-none");
+        }, 300);
       }
     }
 
-    function copyToClipboard(text, label) {
-      navigator.clipboard.writeText(text)
-        .then(() => showToast(`${label} đã sao chép: ${text}`))
-        .catch(() => showToast("❌ Không thể sao chép", true));
-    }
-
-    function showToast(message, isError = false) {
-      const toastContainer = document.getElementById("toastContainer");
+    function showToast(message) {
+      const toastId = "toast" + Date.now();
       const toast = document.createElement("div");
-      toast.className = `toast align-items-center text-white ${isError ? 'bg-danger' : 'bg-success'} border-0`;
+      toast.className = "toast align-items-center text-bg-dark border-0 show";
+      toast.id = toastId;
       toast.setAttribute("role", "alert");
       toast.setAttribute("aria-live", "assertive");
       toast.setAttribute("aria-atomic", "true");
@@ -145,15 +126,12 @@
           <div class="toast-body">${message}</div>
         </div>
       `;
-      toastContainer.appendChild(toast);
-
-      const bsToast = new bootstrap.Toast(toast, { delay: 2000 });
-      bsToast.show();
-
-      toast.addEventListener('hidden.bs.toast', () => toast.remove());
+      document.getElementById("toastContainer").appendChild(toast);
+      setTimeout(() => {
+        toast.remove();
+      }, 2000);
     }
   </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
