--- a/index.html
+++ b/index.html
@@ -3,121 +3,154 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tool SĐT & Biển Số Ảo</title>
+  <title>SĐT & Biển Số Ảo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      padding: 40px;
+      background: #f0f4f8;
+      padding: 30px;
     }
-    .info-box {
+    .container {
+      max-width: 650px;
+      margin: auto;
+      background: white;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+    }
+    .item {
+      background: #f1f5f9;
+      padding: 12px 16px;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+    .phone-plate {
       display: flex;
       align-items: center;
-      gap: 20px;
-      margin-top: 20px;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    .info-group {
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
     .toast-container {
       position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 9999;
+      bottom: 1rem;
+      right: 1rem;
+      z-index: 1055;
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <h3 class="text-center mb-4">🔢 Sinh SĐT & Biển Số Ảo</h3>
 
-  <h2>🔢 Sinh SĐT & Biển Số Ảo</h2>
+    <label class="form-label">Chọn nhà mạng:</label>
+    <select id="carrier" class="form-select mb-2">
+      <option value="Viettel">Viettel</option>
+      <option value="Vinaphone">Vinaphone</option>
+      <option value="Mobifone">Mobifone</option>
+      <option value="Vietnamobile">Vietnamobile</option>
+      <option value="Gmobile">Gmobile</option>
+    </select>
 
-  <div class="form-check form-switch my-3">
-    <input class="form-check-input" type="checkbox" id="randomCarrier">
-    <label class="form-check-label" for="randomCarrier">Trộn nhà mạng</label>
+    <div class="form-check mb-2">
+      <input class="form-check-input" type="checkbox" id="randomizeCarrier" />
+      <label class="form-check-label" for="randomizeCarrier">🔀 Trộn tất cả nhà mạng</label>
+    </div>
+
+    <label for="count" class="form-label">Số lượng:</label>
+    <input type="number" id="count" class="form-control mb-3" value="5" min="1" max="100" />
+
+    <button class="btn btn-primary w-100 mb-3" onclick="generate()">🎲 Sinh dữ liệu</button>
+
+    <div id="result"></div>
   </div>
 
-  <button class="btn btn-primary" onclick="generateInfo()">🎲 Sinh mới</button>
-
-  <div id="infoBox" class="info-box d-none">
-    <div>
-      <strong>SĐT:</strong> <span id="phoneNumber">--</span>
-      <button class="btn btn-sm btn-outline-success ms-2" onclick="copyPhone()">📋 Sao chép SĐT</button>
-    </div>
-    <div>
-      <strong>Biển:</strong> <span id="licensePlate">--</span>
-      <button class="btn btn-sm btn-outline-warning ms-2" onclick="copyPlate()">📋 Sao chép Biển</button>
-    </div>
-  </div>
-
-  <!-- Bootstrap toast -->
-  <div class="toast-container" id="toastContainer"></div>
+  <!-- Toast Container -->
+  <div class="toast-container position-fixed bottom-0 end-0 p-3" id="toastContainer"></div>
 
   <script>
-    const carriers = {
+    const prefixes = {
       Viettel: ["032", "033", "034", "035", "036", "037", "038", "039", "086"],
       Vinaphone: ["081", "082", "083", "084", "085", "088", "091", "094"],
       Mobifone: ["070", "076", "077", "078", "079", "089", "090", "093"],
       Vietnamobile: ["052", "056", "058", "092"],
-      Gmobile: ["059", "099"]
+      Gmobile: ["059", "099"],
     };
-    const licensePrefixes = ["36AG", "36AD", "36AB", "36AS", "36AK", "36AM", "36AN", "36AX", "36AS"];
 
-    let phoneCopied = false;
-    let plateCopied = false;
+    const platePrefixes = ["36AG", "36AD", "36AB", "36AS", "36AK", "36AM", "36AN", "36AX"];
 
-    function generateInfo() {
-      const isRandomCarrier = document.getElementById("randomCarrier").checked;
+    function generate() {
+      const carrierSelect = document.getElementById("carrier").value;
+      const isRandomCarrier = document.getElementById("randomizeCarrier").checked;
+      const count = parseInt(document.getElementById("count").value);
+      const result = document.getElementById("result");
+      result.innerHTML = "";
 
-      // Tạo SĐT
-      let allPrefixes = isRandomCarrier
-        ? Object.values(carriers).flat()
-        : carriers["Viettel"]; // Default nếu không chọn trộn
+      let allPrefixes = [];
+      if (isRandomCarrier) {
+        Object.values(prefixes).forEach(arr => allPrefixes = allPrefixes.concat(arr));
+      }
 
-      const prefix = allPrefixes[Math.floor(Math.random() * allPrefixes.length)];
-      const number = Math.floor(1000000 + Math.random() * 9000000);
-      const phone = prefix + number;
+      for (let i = 0; i < count; i++) {
+        const phonePrefix = isRandomCarrier
+          ? allPrefixes[Math.floor(Math.random() * allPrefixes.length)]
+          : prefixes[carrierSelect][Math.floor(Math.random() * prefixes[carrierSelect].length)];
 
-      // Tạo biển số
-      const lpHead = licensePrefixes[Math.floor(Math.random() * licensePrefixes.length)];
-      const lpBody = Math.floor(100 + Math.random() * 900); // 3 số
-      const lpTail = Math.floor(10 + Math.random() * 90); // 2 số
-      const plate = `${lpHead} - ${lpBody}.${lpTail}`;
+        const phoneNum = phonePrefix + Math.floor(1000000 + Math.random() * 9000000);
 
-      // Hiển thị
-      document.getElementById("phoneNumber").innerText = phone;
-      document.getElementById("licensePlate").innerText = plate;
-      document.getElementById("infoBox").classList.remove("d-none");
+        const platePfx = platePrefixes[Math.floor(Math.random() * platePrefixes.length)];
+        const numberPart = Math.floor(100 + Math.random() * 900);
+        const tailPart = String(Math.floor(Math.random() * 100)).padStart(2, '0');
+        const plateNum = `${platePfx} - ${numberPart}.${tailPart}`;
 
-      // Reset trạng thái copy
-      phoneCopied = false;
-      plateCopied = false;
-    }
+        const item = document.createElement("div");
+        item.className = "item";
 
-    function copyPhone() {
-      const text = document.getElementById("phoneNumber").innerText;
-      navigator.clipboard.writeText(text);
-      showToast("Đã sao chép SĐT!");
-      phoneCopied = true;
-      checkCopiedAll();
-    }
+        // Gắn trạng thái copy
+        item.dataset.phoneCopied = "false";
+        item.dataset.plateCopied = "false";
 
-    function copyPlate() {
-      const text = document.getElementById("licensePlate").innerText;
-      navigator.clipboard.writeText(text);
-      showToast("Đã sao chép Biển số!");
-      plateCopied = true;
-      checkCopiedAll();
-    }
-
-    function checkCopiedAll() {
-      if (phoneCopied && plateCopied) {
-        setTimeout(() => {
-          document.getElementById("infoBox").classList.add("d-none");
-        }, 300);
+        item.innerHTML = `
+          <div class="phone-plate">
+            <div class="info-group">
+              <span>📱 <strong class="phone">${phoneNum}</strong></span>
+              <button class="btn btn-sm btn-outline-secondary" onclick="copyItem(this, 'phone')">Sao chép SĐT</button>
+            </div>
+            <div class="info-group">
+              <span>🚘 <strong class="plate">${plateNum}</strong></span>
+              <button class="btn btn-sm btn-outline-secondary" onclick="copyItem(this, 'plate')">Sao chép BS</button>
+            </div>
+          </div>
+        `;
+        result.appendChild(item);
       }
     }
 
-    function showToast(message) {
-      const toastId = "toast" + Date.now();
+    function copyItem(button, type) {
+      const item = button.closest(".item");
+      const text = item.querySelector(`.${type}`).innerText;
+
+      navigator.clipboard.writeText(text)
+        .then(() => {
+          showToast(`${type === 'phone' ? 'SĐT' : 'Biển số'} đã sao chép: ${text}`);
+          item.dataset[type + "Copied"] = "true";
+
+          if (item.dataset.phoneCopied === "true" && item.dataset.plateCopied === "true") {
+            setTimeout(() => item.remove(), 300);
+          }
+        })
+        .catch(() => showToast("❌ Không thể sao chép", true));
+    }
+
+    function showToast(message, isError = false) {
+      const toastContainer = document.getElementById("toastContainer");
       const toast = document.createElement("div");
-      toast.className = "toast align-items-center text-bg-dark border-0 show";
-      toast.id = toastId;
+      toast.className = `toast align-items-center text-white ${isError ? 'bg-danger' : 'bg-success'} border-0`;
       toast.setAttribute("role", "alert");
       toast.setAttribute("aria-live", "assertive");
       toast.setAttribute("aria-atomic", "true");
@@ -126,12 +159,15 @@
           <div class="toast-body">${message}</div>
         </div>
       `;
-      document.getElementById("toastContainer").appendChild(toast);
-      setTimeout(() => {
-        toast.remove();
-      }, 2000);
+      toastContainer.appendChild(toast);
+
+      const bsToast = new bootstrap.Toast(toast, { delay: 2000 });
+      bsToast.show();
+
+      toast.addEventListener('hidden.bs.toast', () => toast.remove());
     }
   </script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
